# Dexscreener_pricebot

./: .gitignore  Cargo.toml  Dockerfile  README.md  cargo.toml  example.env
.github/workflows/: rust.yml
commands/: coin.rs  help.rs  mod.rs  priceinfo.rs
src/: main.rs
src/commands/: addtoken.rs  all.rs  coin.rs  help.rs  mod.rs  price.rs  pricewithoutdb.rs
src/settings/: commandselection.rs  commonfunctions.rs  dbstructs.rs  mod.rs  owneravailablecommands.rs  permissionsettings.rs  settings.rs
