[package]
name = "discordslashbot"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = "1.0.167"
serde_json = "1.0.85"
serde_derive = "1.0.144"
dotenv_codegen = "0.15.0"
poise = "0.5.5"
[target.'cfg(unix)'.dependencies]
openssl = { version = "0.10.55", features = ["vendored"] }

[build.env]
passthrough = [
    "RUST_BACKTRACE",
    "RUST_LOG",
    "TRAVIS",
]
