[package]
name = "dexscreener-pricebot-v2"
version = "0.5.0"
edition = "2021"

[dependencies]
poise = { git = "https://github.com/serenity-rs/poise.git", branch = "next", features = [
    "cache",
    "collector",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serenity = { version = "0.12.0", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
reqwest = { version = "0.11.22", features = ["json"] }
surrealdb = { version = "1.5.4", optional = true }
macro_env = "0.1.8"
once_cell = "1.19.0"
serde = { version = "1.0.204", features = ["derive"] }
futures = "0.3.30"
alloy-primitives = "0.7.7"
cfg-if = "1.0.0"

[features]
database = ["dep:surrealdb", "surrealdb?/kv-rocksdb", "surrealdb?/kv-mem"]
memdatabase = ["surrealdb/kv-mem", "database"]
filedatabase = ["surrealdb/kv-rocksdb", "database"]
